# arvore

./: README.md  pyproject.toml  requirements.txt
arvore/: admin.py
arvore/migrations/: 0001_initial.py  0002_alter_trabalho_salario.py  0002_irmaos.py  0003_primos.py  0003_rename_endereço_trabalho_endereço_atual_and_more.py  0004_pais_filhos.py  0004_remove_trabalho_endereço_atual_and_more.py  0005_mes.py  0005_remove_pais_filhos_pais_filhos.py  0006_antigotrabalho_data_de_admissão_and_more.py  0006_tios_filhos.py  0007_irmaos_mae_irmaos_pai_primos_mae_primos_pai.py  0008_endereco.py  0009_alter_endereco_numero.py  0010_endereco_cep.py  0011_escolaridade_trabalho.py  0012_irmaos_escolaridade_pais_escolaridade_and_more.py  0013_profissao.py
arvore/models/: __init__.py  endereco.py  escolaridade.py  irmaos.py  mes.py  pais.py  primos.py  profissão.py  tios.py  trabalho.py
arvore/serializer/: __init__.py  endereco.py  escolaridade.py  irmaos.py  mes.py  pais.py  primos.py  profissão.py  tios.py  trabalho.py
arvore/view/: __init__.py  endereco.py  escolaridade.py  irmaos.py  mes.py  pais.py  primos.py  profissão.py  tios.py  trabalho.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
